@@ -64,6 +64,20 @@ transport* session::getTransport(const string& protocol, authenticator* auth)
 }
 
 
+transport* session::getTransport(const messaging::url& url, authenticator* auth)
+{
+	service* sv = serviceFactory::getInstance()->create(this, url, auth);
+
+	if (sv->getType() != service::TYPE_TRANSPORT)
+	{
+		delete (sv);
+		throw exceptions::no_service_available();
+	}
+
+	return static_cast<transport*>(sv);
+}
+
+
 store* session::getStore(authenticator* auth)
 {
 	return (getStore(m_props["store.protocol"], auth));
@@ -73,6 +87,20 @@ store* session::getStore(authenticator* auth)
 store* session::getStore(const string& protocol, authenticator* auth)
 {
 	service* sv = serviceFactory::getInstance()->create(this, protocol, auth);
+
+	if (sv->getType() != service::TYPE_STORE)
+	{
+		delete (sv);
+		throw exceptions::no_service_available();
+	}
+
+	return static_cast<store*>(sv);
+}
+
+
+store* session::getStore(const messaging::url& url, authenticator* auth)
+{
+	service* sv = serviceFactory::getInstance()->create(this, url, auth);
 
 	if (sv->getType() != service::TYPE_STORE)
 	{
