@@ -10,6 +10,9 @@ VERSION 0.6.1-cvs
 
  * Added versioning in library name (eg. libvmime-0.6.a).
 
+ * Allow creating a service from an URL (session::getStore("url") and
+   session::getTransport("url"))
+
 2004-12-24  Vincent Richard  <vincent@vincent-richard.net>
 
  * Renamed class 'disposition' to 'contentDisposition' and the enum
